review section added and has been made responsive

--- a/biker-zone/index.html
+++ b/biker-zone/index.html
@@ -21,7 +21,7 @@
 
     <style>
       .font-poppins {
-        font-family: 'Poppins', sans-serif;
+        font-family: "Poppins", sans-serif;
       }
     </style>
     <script>
@@ -29,13 +29,13 @@
         theme: {
           extend: {
             colors: {
-              clifford: '#da373d',
-              'bike-primary': '#E76F51',
-              'bike-primary-bg': 'rgba(231, 111, 81, 0.1)',
+              clifford: "#da373d",
+              "bike-primary": "#E76F51",
+              "bike-primary-bg": "rgba(231, 111, 81, 0.1)",
             },
           },
         },
-      }
+      };
     </script>
   </head>
   <body class="font-poppins">
@@ -178,13 +178,19 @@
       <!-- featured bike section - Homework -->
       <section class="my-44">
         <div class="text-center">
-          <h2 class="text-5xl font-bold text-center">Featured Bikes in This Year</h2>
-          <p class="text-lg font-semibold text-bike-primary border-b-2 border-bike-primary w-fit mx-auto">Best Bike Collection</p>
+          <h2 class="text-5xl font-bold text-center">
+            Featured Bikes in This Year
+          </h2>
+          <p
+            class="text-lg font-semibold text-bike-primary border-b-2 border-bike-primary w-fit mx-auto"
+          >
+            Best Bike Collection
+          </p>
         </div>
         <div class="lg:flex justify-evenly items-center">
-          <div><img src="./images/others/extrabike.png" alt=""></div>
-          <div><img src="./images/others/extrabike.png" alt=""></div>
-          <div><img src="./images/others/extrabike.png" alt=""></div>
+          <div><img src="./images/others/extrabike.png" alt="" /></div>
+          <div><img src="./images/others/extrabike.png" alt="" /></div>
+          <div><img src="./images/others/extrabike.png" alt="" /></div>
         </div>
       </section>
 
@@ -251,7 +257,157 @@
       </section>
 
       <!-- Happy Clients Happy Homework -->
-      <section></section>
+      <section class="my-24 container mx-auto">
+        <div>
+          <h2 class="text-5xl font-bold text-center">
+            Happy <span class="text-bike-primary">Clients Says</span>
+          </h2>
+        </div>
+        <!-- CARDS -->
+        <div class="my-20 flex flex-col lg:flex-row justify-evenly items-center gap-4">
+          <!-- CARD-1 -->
+          <div class="w-[350px] border border-1 rounded-lg">
+            <!-- IMAGE -->
+            <div class="py-20 px-6">
+              <div class="avatar flex justify-center">
+                <div
+                  class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2"
+                >
+                  <img
+                    src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp"
+                  />
+                </div>
+              </div>
+              <!-- TEXT DESCRIPTION -->
+              <p class="text-center py-4">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="flex flex-col items-center">
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                </div>
+                <p class="text-[#23A6F0]">Murphy</p>
+                <p>Actress</p>
+              </div>
+            </div>
+          </div>
+          <!-- CARD-2 -->
+          <div class="w-[350px] border border-1 rounded-lg">
+            <!-- IMAGE -->
+            <div class="py-20 px-6">
+              <div class="avatar flex justify-center">
+                <div
+                  class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2"
+                >
+                  <img
+                    src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp"
+                  />
+                </div>
+              </div>
+              <!-- TEXT DESCRIPTION -->
+              <p class="text-center py-4">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="flex flex-col items-center">
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                </div>
+                <p class="text-[#23A6F0]">Murphy</p>
+                <p>Actress</p>
+              </div>
+            </div>
+          </div>
+          <!-- CARD-3 -->
+          <div class="w-[350px] border border-1 rounded-lg">
+            <!-- IMAGE -->
+            <div class="py-20 px-6">
+              <div class="avatar flex justify-center">
+                <div
+                  class="ring-primary ring-offset-base-100 w-24 rounded-full ring ring-offset-2"
+                >
+                  <img
+                    src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp"
+                  />
+                </div>
+              </div>
+              <!-- TEXT DESCRIPTION -->
+              <p class="text-center py-4">
+                Slate helps you see how many more days you need to work to reach
+                your financial goal for the month and year.
+              </p>
+              <div class="flex flex-col items-center">
+                <div class="rating">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                    <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400"
+                    checked="checked" />
+                </div>
+                <p class="text-[#23A6F0]">Murphy</p>
+                <p>Actress</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- FAQ Section -->
       <section class="my-24">
@@ -260,10 +416,7 @@
         </h3>
         <div class="hero lg:flex lg:justify-between">
           <div class="hero-content flex-col lg:flex-row">
-            <img
-              src="./images/others/faq.png"
-              class="w-full rounded-lg"
-            />
+            <img src="./images/others/faq.png" class="w-full rounded-lg" />
             <div class="space-y-5">
               <div class="collapse collapse-arrow border border-blue-100">
                 <input type="radio" name="my-accordion-2" checked="checked" />
@@ -335,13 +488,15 @@
     </main>
 
     <!-- Footer Section -->
-    <footer class="footer bg-black text-neutral-content p-10 md:flex md:justify-between md:items-center ">
+    <footer
+      class="footer bg-black text-neutral-content p-10 md:flex md:justify-between md:items-center"
+    >
       <aside>
         <div class="space-x-6">
           <a href="">Download Now</a> <a href="">License</a>
         </div>
-        <div class="py-4 ">
-          <ul class="flex flex-wrap ">
+        <div class="py-4">
+          <ul class="flex flex-wrap">
             <a href="">
               <li class="pr-6">About</li>
             </a>
